@@ -1,0 +1,37 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 //EN"   "http://www.w3.org/TR/html4/strict.dtd">
+
+<html><!--[if lt IE 8]> <html class="oldIe"> <![endif]--><!--[if gt IE 7]><!--> <html > <!--<![endif]--><head><meta content="text/html; charset=utf-8" http-equiv="content-type"/><title>DPD Online - Tracking</title><link href="/css/trackingMin.css?v=2" rel="stylesheet" type="text/css"/><script type="text/javascript" src="/js/functions.js?v=1"></script></head><body onload="alternateTableRows('trackingTable','','even');"><div id="main" style="width:750px; padding-left:23px;"><div style="float:right;"><button id="printView" name="printView" type="button" value="printView" onclick="showPrintView();"><table><tr><td style="vertical-align:middle;"><img src="/images/icon_arrow_red.gif"></td><td style="font-weight:bold; font-family: Arial,MS Sans Serif; font-weight: normal;font-size: 1.5em;color:#666666;"> Print view</td></tr></table></button></div><div id="header" class="clearBoth" style="left: 8px; width:742px;top:5px;"><div id="dpdLogoLeftWrapper"><img id="dpdLogo" src="/images/DELIStrack/logo.jpg" alt="dpd_logo" onclick="window.location.reload();"></div><div id="dpdLogoRightWrapper"><div id="headerLine"></div><div id="headerText" class="STGUI_HEADER">Tracking</div></div><div class="clearBoth"></div></div><div id="contentFrame" width="100%"><div><div class="contentLeft contentTop contentBorderTopLeft">&nbsp</div><div class="contentCenter contentTop contentBorderTop"><img alt="" border="0" height="1" src="/images/dummy.gif" width="645"> </div><div class="contentRight contentTop contentBorderTopRight">&nbsp</div></div><div class="clearBoth contentMidWrapper"><div class="contentLeft contentMid contentBorderLeftOuter"><div class="contentLeft contentMid contentBorderLeft"> </div></div><div class="contentCenter contentMid contentBorder"><div class="contentInner"><div><table class="alternatingTable" width="100%"><thead><tr class="head"><th colspan="6" ><div >Parcel no. 06505010903049<font size="-2"> E</font></div></th></tr><tr class="head" ><th >Date <br>Time </th><th  >Depot <br>City </th><th  >Type of scan <a href="/data/lang_files/infodocs/REMARKS.en.pdf" target="_new"><img src="/images/icon_info_2.gif" border="0"></a><br> Delivery no.</th><th  ><br>Country &bull; ZIP &bull; Route</th><th style=" text-align:right;padding-right: 10px;" > <br>Tour</th><th style=" text-align:right;padding-right: 10px;" > <br>code</th></tr></thead><tr >
+<td>12/13/2013 <br>08:18 </td><td> <br>DPD data centre</td><td><br>Additional information </td><td colspan="3" valign="bottom"><br>Shipment data transmitted<br></td>
+</tr>
+<tr class="even">
+<td>12/13/2013 <br>16:08 </td><td> <img src="/images/icon_arrow_red.gif" border="0">  <a href="/cgi-bin/dpd-request?typ=9&depot=0650&spra=en&text=2" style="text-decoration:none"><b>0650</b></a><br> Bratislava (SK)</td><td><br>Pick-up </td><td> <br>NL &bull;3565NL &bull; 0511</td>
+<td  style="text-align:right; padding-right: 10px;"> <br>12 </td><td style="text-align:right; padding-right:10px;"><br>101 </td></tr>
+<tr >
+<td>12/16/2013 <br>14:01 </td><td> <img src="/images/icon_arrow_red.gif" border="0">  <a href="/cgi-bin/dpd-request?typ=9&depot=0101&spra=en&text=2" style="text-decoration:none"><b>0101</b></a><br> Kesselsdorf (DE)</td><td><br>Consolidation </td><td> <br>NL &bull;3565NL &bull; 0511</td>
+<td  style="text-align:right; padding-right: 10px;"> <br>650 </td><td style="text-align:right; padding-right:10px;"><br>101 </td></tr>
+<tr class="even">
+<td>12/17/2013 <br>02:53 </td><td> <img src="/images/icon_arrow_red.gif" border="0">  <a href="/cgi-bin/dpd-request?typ=9&depot=0015&spra=en&text=2" style="text-decoration:none"><b>0015</b></a><br> Unna (DE)</td><td><br>Hub scan </td><td> <br>NL &bull;3565NL &bull; 0511</td>
+<td  style="text-align:right; padding-right: 10px;"> <br>15 </td><td style="text-align:right; padding-right:10px;"><br>101 </td></tr>
+<tr >
+<td>12/18/2013 <br>05:32 </td><td> <img src="/images/icon_arrow_red.gif" border="0">  <a href="/cgi-bin/dpd-request?typ=9&depot=0511&spra=en&text=2" style="text-decoration:none"><b>0511</b></a><br> Veenendaal (NL)</td><td><br>Inbound </td><td> <br>NL &bull;3565NL &bull; 0511</td>
+<td  style="text-align:right; padding-right: 10px;"> <br>399 </td><td style="text-align:right; padding-right:10px;"><br>101 </td></tr>
+<tr class="even">
+<td>12/18/2013 <br>06:32 </td><td> <img src="/images/icon_arrow_red.gif" border="0">  <a href="/cgi-bin/dpd-request?typ=9&depot=0511&spra=en&text=2" style="text-decoration:none"><b>0511</b></a><br> Veenendaal (NL)</td><td><br>Out for delivery </td><td> <br>NL &bull;3565NL &bull; 0511</td>
+<td  style="text-align:right; padding-right: 10px;"> <br>164 </td><td style="text-align:right; padding-right:10px;"><br>101 </td></tr>
+<tr >
+<td>12/18/2013 <br>06:32 </td><td> <img src="/images/icon_arrow_red.gif" border="0">  <a href="/cgi-bin/dpd-request?typ=9&depot=0511&spra=en&text=2" style="text-decoration:none"><b>0511</b></a><br> Veenendaal (NL)</td><td><img src="/images/icon_arrow_red.gif" border="0">  <a href="/cgi-bin/delistrack.acl?typ=7&lang=en&pknr=06505010903049&var=0511|1812|0345|2013|998|E||&y1=428&y2=989" style="text-decoration:none"><b>0345</b></a> <br>Out for delivery </td><td> <br>NL &bull;3565NL &bull; 0511</td>
+<td  style="text-align:right; padding-right: 10px;"> <br>164 </td><td style="text-align:right; padding-right:10px;"><br>101 </td></tr>
+<tr class="even">
+<td>12/18/2013 <br>09:54 </td><td> <img src="/images/icon_arrow_red.gif" border="0">  <a href="/cgi-bin/dpd-request?typ=9&depot=0511&spra=en&text=2" style="text-decoration:none"><b>0511</b></a><br> Veenendaal (NL)</td><td><img src="/images/icon_arrow_red.gif" border="0">  <a href="/cgi-bin/delistrack.acl?typ=7&lang=en&pknr=06505010903049&var=0511|1812|107012|2013|998|E||" style="text-decoration:none"><b>107012</b></a> <br>Delivered to: A COLLARD </td><td> <br>NL &bull;3565NL &bull; 0511</td>
+<td  style="text-align:right; padding-right: 10px;"> <br>164 </td><td style="text-align:right; padding-right:10px;"><br>101 </td></tr>
+<tr >
+<td>12/19/2013 <br>02:27 </td><td> <img src="/images/icon_arrow_red.gif" border="0">  <a href="/cgi-bin/dpd-request?typ=9&depot=0511&spra=en&text=2" style="text-decoration:none"><b>0511</b></a><br> Veenendaal (NL)</td><td><br>Additional information </td><td colspan="3" valign="bottom">POD available
+ <br></td>
+</tr>
+</table></div><br><div><div style="float:left;"><div class="box"><div class="boxHead">Code description</div><div ><table id="codeTable"><tr ><td> 101 </td><td>DPD CLASSIC 
+ (D)</td></tr></table>
+</div></div></div></div><div style="clear:both;"> </div><br><img src="/images/icon_arrow_red.gif" border="0">  <a href="/cgi-bin/delistrack?typ=2lang=sk&lang=en&pknr=06505010903049&showMPSID=0&showRefNo=1" style="text-decoration:none;"><b>Show MPS/CUS ID (if available).</b></a><br>
+<div style="float:left;width:100%;"><br/></div><br><br></div></div><div class="contentRight contentMid contentBorderRightOuter"><div class="contentRight contentMid contentBorderRight"> </div></div><div class="clearBoth"> </div><div><div class="contentLeft contentBottom contentBorderBottomLeft"> </div><div class="contentCenter contentBottom contentBorderBottom"> </div><div class="contentRight contentBottom contentBorderBottomRight"> </div></div></div><div id="DPDfooter" class="clearBoth"><br><table border="0" width="100%" cellpadding="0" cellspacing="0"><tr><td align="left" style="font-size: 10px; color: #999990; font-weight: normal; text-align:justify;">
+The DPD shipment tracking system which is accessible via Tracking, and the shipment tracking data which is available from Tracking, are the property of DPD. DPD gives permission for the use of its shipment tracking system exclusively for the purpose of checking the status of shipments which you have entrusted to DPD for transport and delivery, or which have been entrusted to DPD by a third party on your behalf. Permission is not given to use the system for other purposes. Without the express written permission of DPD you do not have the right to make the shipment tracking data available on a website, to reproduce it elsewhere, or to distribute, copy, store, use or sell it for commercial purposes. The service which is provided is for your own personal use. As a result your right to use the Tracking shipment tracking system or the shipment tracking data cannot be assigned to another party. In the event of any breach of these conditions the access rights to Tracking can be withdrawn and the passwords / user codes may be deleted. In addition such infringements may be punished by law.<br>
+Any access to Tracking or use of the shipment tracking system / shipment tracking data which does not conform to these conditions of use takes place without permission and is strictly prohibited
+</td></tr></table><br><a href="http://www.dpd.com/portal/DPD-Portal/Siteutilities/Imprint" style="text-decoration:none"><img src="/images/icon_arrow_red.gif"><b>  Imprint</b></a><br><br><br><br></div></div></body></html>
